--- a/PMA/index.html
+++ b/PMA/index.html
@@ -652,7 +652,7 @@
                  <li><a href="https://code.gov/">Code.gov</a></li>
                   <li><a href="https://www.digitalgov.gov/">Digitalgov.gov</a></li>
                   <li><a href="https://www.digitalgov.gov/services/dap/">Digital Analytics Program</a></li>
-                    <li><a href="https://labs.data.gov/dashboard/offices">Open Data Dashboard</a></li>
+                  <li><a href="https://labs.data.gov/dashboard/">Open Data Dashboard</a></li>
                      <li><a href="https://www.usds.gov/">USDS.gov</a></li>
 </div>
                </ul>
