--- a/about/framework_about.html
+++ b/about/framework_about.html
@@ -365,6 +365,7 @@
 <li><strong><a href="../framework/objectives.html">Strategic Objectives:</a></strong> The long-term objectives, outcomes, and impacts an agency hopes to accomplish throughout the term of the Administration. </li>
       </ul>
   <p>OMB policy and guidance to Federal agencies for implementing the GPRA Modernization Act can be found in <a href="https://www.whitehouse.gov/sites/whitehouse.gov/files/omb/assets/a11_current_year/a11_2017.pdf" target="_blank">OMB Circular A-11, Part 6.</a></p>
+    <img src="../about/Perf-Framework-Visual-3.30.2018-LA.png" alt=Performance Framework visual overview" width="100%">
 </div>
   </main>
   <footer class="usa-footer usa-footer-big" role="contentinfo">
